# ESE_SEN

Assignment/: CMakeLists.txt  MQTT_SHT31.cpp  main.cpp  test.cpp  test.h
Assignment/BMELIB/: bme280.cpp  bme280.h  bme280_test  main.cpp  main.cxx
Assignment/MQTT_lib/: MQTT  MQTT.cpp  MQTT.h  example.cpp  my_program
Assignment/SHT31_MQTT_TB/: CMakeLists.txt  main.cpp
Assignment/SHT31_MQTT_lib/: SHT31_MQTT.cpp  SHT31_MQTT.h
Assignment/SHT31_lib/: SHT31  SHT31.cpp  SHT31.h  TB.cpp  example.cpp  my_program
Assignment/SHT31_lib/UML stuff/: UsecaseSHT31.docx  UsecaseSHT31.puml
Assignment/UML stuff/: UsecaseSHT31.puml
Assignment/paho.mqtt.cpp/test/unit/: catch2_version.h
Code/Assignment/SHT31_lib/: SHT31.cpp  SHT31.h  example.cpp
Code/Lifecycle/: betterSmartPointersLifecycle.cpp  moreComplexLifecycle.cpp  morecomplexLC  simpleLC  simpleLifecycle.cpp  smartPointersLC  smartPointersLifecycle.cpp
Code/SHTExample/: SHT31Example
